--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.6)
 project(CPP-Bigrams)
 set(CMAKE_CXX_STANDARD 11)
+set(Boost_USE_STATIC_LIBS ON)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+set(BOOST_ALL_DYN_LINK OFF)
+find_package(Boost 1.60.0 REQUIRED COMPONENTS system)
+set(CMAKE_CXX_FLAGS "-lboost_system -lboost_filesystem -DBOOST_SYSTEM_NO_DEPRECATED -DBOOST_LOG_DYN_LINK")
 set(SOURCE_FILES ../CPP-Bigrams/main.cpp ctpl.h ctpl_stl.h Producer.cpp Producer.h Consumer.cpp Consumer.h)
-include_directories("C:\\Program Files\\boost_1_63_0")
 add_executable(CPP-Bigrams ${SOURCE_FILES} ctpl.h ctpl_stl.h)
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
