--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ find_package(Boost 1.60.0 REQUIRED COMPONENTS filesystem system iostreams)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}\\include)
 INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${BOOST_ROOT})
 set(CMAKE_CXX_FLAGS "-lboost_system -lboost_filesystem -DBOOST_SYSTEM_NO_DEPRECATED")
-set(SOURCE_FILES ../CPP-Bigrams/main.cpp ctpl.h ctpl_stl.h Producer.cpp Producer.h Consumer.h Consumer.cpp concurrentqueue.h blockingconcurrentqueue.h)
+set(SOURCE_FILES ../CPP-Bigrams/main.cpp ctpl.h ctpl_stl.h Producer.cpp Producer.h Consumer.h Consumer.cpp concurrentqueue.h blockingconcurrentqueue.h ConcurrentUnorderedIntMap.hpp)
 add_executable(CPP-Bigrams ${SOURCE_FILES} ctpl.h ctpl_stl.h)
 target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
