Uso degli stringstream

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME ON)
 set(BOOST_ALL_DYN_LINK OFF)
-find_package(Boost 1.60.0 REQUIRED COMPONENTS filesystem system iostreams)
+find_package(Boost 1.60.0 REQUIRED COMPONENTS filesystem system iostreams timer)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}\\include)
 INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${BOOST_ROOT})
 set(CMAKE_CXX_FLAGS "-lboost_system -lboost_filesystem -DBOOST_SYSTEM_NO_DEPRECATED")
