--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME ON)
 set(BOOST_ALL_DYN_LINK OFF)
-find_package(Boost 1.60.0 REQUIRED COMPONENTS filesystem system iostreams timer)
+find_package(Boost 1.58.0 REQUIRED COMPONENTS filesystem system iostreams timer)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}\\include)
 INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${BOOST_ROOT})
-set(CMAKE_CXX_FLAGS "-lboost_system -lboost_filesystem -DBOOST_SYSTEM_NO_DEPRECATED")
+set(CMAKE_CXX_FLAGS "-lboost_system -lboost_filesystem -DBOOST_SYSTEM_NO_DEPRECATED -lrt -lm -lpthread")
 set(SOURCE_FILES ../CPP-Bigrams/main.cpp ThreadPool/ctpl.h ThreadPool/ctpl_stl.h ProducerConsumer/Producer.cpp ProducerConsumer/Producer.h ProducerConsumer/Consumer.h ProducerConsumer/Consumer.cpp DataStructure/concurrentqueue.h DataStructure/blockingconcurrentqueue.h DataStructure/ConcurrentUnorderedIntMap.hpp)
 add_executable(CPP-Bigrams ${SOURCE_FILES} ThreadPool/ctpl.h ThreadPool/ctpl_stl.h)
-target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} -lpthread)
